objects/Project_Location_Relationship__c.object
<CustomObject>
    <description>Junction object for the Project and Location objects.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project-Location</relationshipLabel>
        <relationshipName>Project_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Lookup field to Location</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Project-Location</relationshipLabel>
        <relationshipName>Project_Location</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Project__c</fullName>
        <description>Lookup to Service Project</description>
        <label>Service Project</label>
        <referenceTo>ServiceProject__c</referenceTo>
        <relationshipLabel>Project-Location</relationshipLabel>
        <relationshipName>Projects_Locations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project-Location</label>
    <nameField>
        <label>Project-Location Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects-Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>